      added it, or with our own version if we add it.  This way, if a user
      temporarily runs an old version of Tor and then switches back to a new
      one, she doesn't automatically lose her guards.

  o Minor features (controller):
    - Accept LF instead of CRLF on controller, since some software has a
      hard time generating real Internet newlines.

  o Major bugfixes:
    - Fix possible segfaults in functions called from
      rend_process_relay_cell().

  o Minor bugfixes:
    - When generating information telling us how to extend to a given
      router, do not try to include the nickname if it is absent.  Fixes
      bug 467.
    - On OSX, stop warning the user that kqueue support in libevent is
      "experimental", since it seems to have worked fine for ages.
    - Fix a user-triggerable segfault in expand_filename().  (There isn't
      a way to trigger this remotely.)
    - Fix a memory leak when freeing incomplete requests from DNSPort.
      (Found by Niels Provos with valgrind.)

  o Code simplifications and refactoring:
    - Revamp file-writing logic so we don't need to have the entire contents
      of a file in memory at once before we write to disk.  Tor, meet stdio.
    - Turn "descriptor store" into a full-fledged type.
    - Move all NT services code into a separate source file.


Changes in version 0.1.2.17 - 2007-08-30
  o Major bugfixes (security):
    - We removed support for the old (v0) control protocol. It has been
      deprecated since Tor 0.1.1.1-alpha, and keeping it secure has
      become more of a headache than it's worth.

  o Major bugfixes (load balancing):
    - When choosing nodes for non-guard positions, weight guards
      proportionally less, since they already have enough load. Patch
      from Mike Perry.
    - Raise the "max believable bandwidth" from 1.5MB/s to 10MB/s. This
      will allow fast Tor servers to get more attention.
    - When we're upgrading from an old Tor version, forget our current