@@ -15,6 +15,13 @@ Changes in version 0.2.0.7-alpha - 2007-??-??
     - Accept LF instead of CRLF on controller, since some software has a
       hard time generating real Internet newlines.
 
+  o Removed features:
+     - Routers no longer include bandwidth-history lines in their
+       descriptors; this information is already available in extra-info
+       documents, and including it in router descriptors took up 60% (!) of
+       compressed router descriptor downloads.  Completes implementation of
+       proposal 104.
+
   o Major bugfixes:
     - Fix possible segfaults in functions called from
       rend_process_relay_cell().
